# soulcaster

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLUSTERING_MANUAL_EDITS_PLAN.md  Dockerfile  IMPLEMENTATION_PLAN.md  PRD.md  README.md  TESTING_GUIDE.md  justfile  test_create_one_issue.py  test_phase1_interactive.py  test_phase1_manual.sh  test_redis_perms.py
backend/: .env.example  README.md  blob_storage.py  cluster_analysis.py  clustering.py  clustering_runner.py  datadog_client.py  debug_runner.py  generate_test_data.py  github_app_client.py  github_app_helpers.py  github_client.py  job_logs_manager.py  limits.py  main.py  models.py  planner.py  posthog_client.py  pyproject.toml  reddit_poller.py  requirements.txt  sentry_client.py  splunk_client.py  store.py  vector_store.py
backend/agent_runner/: __init__.py  aws.py  sandbox.py
backend/e2b_template/: package-lock.json  package.json
backend/e2b_template/kilo-sandbox-v-0-1/: README.md  build.dev.ts  build.prod.ts  package-lock.json  package.json  template.ts
backend/tests/: REGRESSION_TESTS.md  conftest.py  test_blob_storage.py  test_clustering_quality.py  test_clustering_runner.py  test_clustering_strategies.py  test_clusters.py  test_coding_agent_flow.py  test_datadog_integration.py  test_feedback_api.py  test_github_ingestion.py  test_github_sync_quota_integration.py  test_hdel_cluster_fields.py  test_ingestion.py  test_integration_config.py  test_job_logs_manager.py  test_jobs.py  test_planner.py  test_posthog_integration.py  test_project_id_consistency.py  test_reddit_config_api.py  test_reddit_poller.py  test_sandbox_agent_script.py  test_sandbox_blob_archival.py  test_sentry_enhanced.py  test_splunk_integration.py  test_store_coding_plan.py  test_store_env_vars.py  test_store_sources_serialization.py
coding-agent/: .gitignore  (+8 more)
(+150 files in other folders)
